[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lluminate"
version = "0.1.0"
description = "Advanced toolkit for lluminate operations"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "LlamaSearch AI", email = "support@llamasearch.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["llama", "ai", "machine-learning", "lluminate"]

dependencies = [
    "requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://github.com/llamasearchai/lluminate"
"Bug Tracker" = "https://github.com/llamasearchai/lluminate/issues"
"Source Code" = "https://github.com/llamasearchai/lluminate"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
